# timeit

./: Cargo.toml  README.md
.github/workflows/: aur-publish.yml  publish.yml  release.yml
src/: main.rs
